Beaver Builder plugin and theme updates.

--- a/wordpress/wp-content/themes/bb-theme/less/blocks.less
+++ b/wordpress/wp-content/themes/bb-theme/less/blocks.less
@@ -65,7 +65,7 @@ body.has-blocks .fl-post-content li {
 .wp-block-cover-text p {
   padding: 1.5em 20px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: @mobile-breakpoint) {
   .wp-block-cover-text p {
     padding: 1.5em 0;
   }
