--- a/wordpress/wp-content/themes/bb-theme/less/footer-widgets.less
+++ b/wordpress/wp-content/themes/bb-theme/less/footer-widgets.less
@@ -33,7 +33,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 992px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 992px) {
+@media (min-width: @medium-breakpoint) {
 
 	.fl-page-footer-widgets {
 		display: block;
