--- a/wordpress/wp-content/themes/bb-theme/less/footer.less
+++ b/wordpress/wp-content/themes/bb-theme/less/footer.less
@@ -97,7 +97,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 768px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 768px) {
+@media (min-width: @mobile-breakpoint) {
 
 	.fl-page-footer {
 		.fl-page-footer-text,
@@ -129,7 +129,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 992px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 992px) {
+@media (min-width: @medium-breakpoint) {
 
 	.fl-page-footer-container {
 		padding: 20px 0 0;
