--- a/wordpress/wp-content/themes/bb-theme/less/nav-centered.less
+++ b/wordpress/wp-content/themes/bb-theme/less/nav-centered.less
@@ -8,7 +8,7 @@ Appearance > Theme Settings > Code or create a child theme.
 
 */
 
-@media (min-width: 768px) {
+@media (min-width: @mobile-breakpoint) {
 
 	.fl-page-nav-centered {
 		text-align: center;
