--- a/wordpress/wp-content/themes/bb-theme/less/nav-offcanvas.less
+++ b/wordpress/wp-content/themes/bb-theme/less/nav-offcanvas.less
@@ -329,7 +329,7 @@ Appearance > Theme Settings > Code or create a child theme.
 	}
 }
 
-@media (min-width: 992px) {
+@media (min-width: @medium-breakpoint) {
 	.fl-responsive-nav-enabled {
 		&.fl-shrink-header-enabled {
 			&.admin-bar {
