--- a/wordpress/wp-content/themes/bb-theme/less/nav-right.less
+++ b/wordpress/wp-content/themes/bb-theme/less/nav-right.less
@@ -33,7 +33,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 768px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 768px) {
+@media (min-width: @mobile-breakpoint) {
 
 	.fl-page-nav-right {
 		text-align: center;
@@ -70,7 +70,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 992px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 992px) {
+@media (min-width: @medium-breakpoint) {
 
 	.fl-page-nav-right {
 		text-align: right;
