--- a/wordpress/wp-content/themes/bb-theme/less/shrink-header.less
+++ b/wordpress/wp-content/themes/bb-theme/less/shrink-header.less
@@ -11,7 +11,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 992px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 992px) {
+@media (min-width: @medium-breakpoint) {
 
 	.fl-shrink-header-enabled {
 		&.admin-bar .fl-page-bar {
