--- a/wordpress/wp-content/themes/bb-theme/less/skin-modern.less
+++ b/wordpress/wp-content/themes/bb-theme/less/skin-modern.less
@@ -27,7 +27,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 768px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 768px) {
+@media (min-width: @mobile-breakpoint) {
 
 	/* Nav
 	----------------------------------------------------------- */
