--- a/wordpress/wp-content/themes/bb-theme/less/fadein-header.less
+++ b/wordpress/wp-content/themes/bb-theme/less/fadein-header.less
@@ -62,7 +62,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 992px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 992px) {
+@media (min-width: (@medium-breakpoint - 1)) {
 
 	.fl-page-header-fixed {
 		.fl-page-fixed-nav-wrap {
