--- a/wordpress/wp-content/themes/bb-theme/less/fixed-header.less
+++ b/wordpress/wp-content/themes/bb-theme/less/fixed-header.less
@@ -12,7 +12,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 992px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 992px) {
+@media (min-width: @medium-breakpoint) {
 
 	.fl-fixed-header {
 		&.admin-bar .fl-page-bar {
