--- a/wordpress/wp-content/themes/bb-theme/less/nav-centered-inline-logo.less
+++ b/wordpress/wp-content/themes/bb-theme/less/nav-centered-inline-logo.less
@@ -20,7 +20,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 768px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 768px) {
+@media (min-width: @mobile-breakpoint) {
 
 	.fl-page-nav-centered-inline-logo {
 		text-align: center;
@@ -53,7 +53,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 992px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 992px) {
+@media (min-width: @medium-breakpoint) {
 
 	.fl-page-nav-centered-inline-logo {
 		text-align: center;
