--- a/wordpress/wp-content/themes/bb-theme/less/nav-left.less
+++ b/wordpress/wp-content/themes/bb-theme/less/nav-left.less
@@ -31,7 +31,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 768px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 768px) {
+@media (min-width: @mobile-breakpoint) {
 
 	.fl-page-nav-left {
 		text-align: center;
@@ -68,7 +68,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 992px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 992px) {
+@media (min-width: @medium-breakpoint) {
 
 	.fl-page-nav-left {
 		text-align: right;
