--- a/wordpress/wp-content/themes/bb-theme/less/submenu-indicator.less
+++ b/wordpress/wp-content/themes/bb-theme/less/submenu-indicator.less
@@ -11,7 +11,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 767px or less
 ----------------------------------------------------------- */
 
-@media (max-width: 767px) {
+@media (max-width: (@mobile-breakpoint - 1)) {
 
 	.fl-submenu-indicator {
 		.fl-page-nav {
@@ -31,7 +31,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 768px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 768px) {
+@media (min-width: @mobile-breakpoint) {
 
 	.fl-submenu-indicator {
 		.fl-page-nav {
