--- a/wordpress/wp-content/themes/bb-theme/less/top-bar.less
+++ b/wordpress/wp-content/themes/bb-theme/less/top-bar.less
@@ -175,7 +175,7 @@ Appearance > Theme Settings > Code or create a child theme.
 /* Media Query - 768px or greater
 ----------------------------------------------------------- */
 
-@media (min-width: 768px) {
+@media (min-width: @mobile-breakpoint) {
 
 	.fl-page-bar {
 		.fl-page-bar-nav {
