--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--event.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--event.scss
@@ -14,15 +14,15 @@
   }
 
   &--title h3 {
-    margin: .4em 0 0 0;
-  }
-
-  &--subtitle h4 {
     margin: 0;
   }
 
-  &--date {
-    margin-bottom: .7em;
+  &--date h4 {
+    margin: .6em 0 0 0;
+  }
+
+  &--subtitle h4 {
+    margin: .3em 0 0 0;
   }
 
   @include breakpoint(600px) {
