The beavers take over the home page.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/_beaver-overrides.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/_beaver-overrides.scss
@@ -1,3 +1,11 @@
+.fl-row.fl-row-fixed-width {
+  max-width: 100%;
+}
+
+.fl-row-content.fl-row-fixed-width {
+  max-width: 100%;
+}
+
 .fl-module-content {
   // margin: 0;
 }
