--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_site-header.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_site-header.scss
@@ -30,6 +30,7 @@ body:not(.home) .site-title {
     left: 0;
     background-image: url("../../images/d_train.png");
     background-size: contain;
+    background-repeat: no-repeat;
     display: block;
     width: 100%;
     height: 100%;
