--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/_beaver-overrides.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/_beaver-overrides.scss
@@ -22,6 +22,11 @@
 
       .fl-module-content {
         margin: 0 0 20px;
+
+        // override specific modules here.
+        .fl-separator {
+          border-top: 1px solid $color--primary-lighter;
+        }
       }
     }
   }
