Home Page Theming Adjustments.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--home-page-feature.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/blocks/_block--home-page-feature.scss
@@ -4,6 +4,7 @@
   background-color: rgba(#dedede, .5);
   position: relative;
   transition: .5s ease-in-out;
+  height: 100%;
 
   p {
     font-family: $font-choice--base;
