--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image.scss
@@ -2,11 +2,17 @@
   overflow: hidden;
   position: relative;
   height: 44vw;
-  background-image: url(../../images/dean-portrait_028_v01-3.jpg);
+  background-image: url(../../images/dean-portrait_028_v01-4_cropped.jpg);
   background-color: #2a231b;
   background-repeat: no-repeat;
   background-size: 100vw;
-  background-position: top -7.75vw center;
+  background-position: center center;
+  transition: $transition-fast;
+
+  @include breakpoint($lg) {
+    max-height: 50vh;
+    background-position: center center;
+  }
 }
 
 .front-page-text {
@@ -27,7 +33,6 @@
     line-height: 1.3;
     color: rgba(white, .85);
     font-weight: 700;
-    // transition: $transition-fast;
 
     p {
       margin: 0;
