--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image.scss
@@ -27,19 +27,20 @@
 
   .inner {
     width: 100%;
-    margin-bottom: 1vw;
-    padding: $site-padding;
-    font-size: calc(10px + 1.5vw);
+    margin-bottom: 0;
+    padding: $site-padding 0;
+    font-size: calc(8px + 1.5vw);
     line-height: 1.3;
     color: rgba(white, .85);
     font-weight: 700;
+    transition: $transition-fast;
 
     p {
       margin: 0;
     }
 
     @include breakpoint($sm) {
-      font-size: calc(16px + 1.5vw);
+      font-size: calc(14px + 1.5vw);
     }
   }
 
