Fixing home page image.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image.scss
@@ -10,10 +10,11 @@
   transition: $transition-fast;
 
   @include breakpoint($lg) {
-    max-height: 50vh;
-    background-position: center center;
+    max-height: 85vh;
+    // background-position: center center;
   }
 }
+
 
 .front-page-text {
   position: relative;
