--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_mixins.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_mixins.scss
@@ -129,3 +129,21 @@
 // Transitions
 $transition: all 0.5s ease;
 $transition-fast: all 0.125s linear;
+
+@mixin yes-beaver {
+  #wp-toolbar #wp-admin-bar-edit {
+    display: none;
+  }
+  #wp-toolbar #wp-admin-bar-fl-builder-frontend-edit-link {
+    display: block;
+  }
+}
+
+@mixin no-beaver {
+  #wp-toolbar #wp-admin-bar-edit {
+    display: block;
+  }
+  #wp-toolbar #wp-admin-bar-fl-builder-frontend-edit-link {
+    display: none;
+  }
+}
