--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image.scss
@@ -24,7 +24,7 @@
   z-index: 1000;
   margin: 0 auto;
   max-width: $max-site-width;
-  padding: 0 $site-padding;
+  padding: 0;
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -33,7 +33,7 @@
   .inner {
     width: 100%;
     margin-bottom: 0;
-    padding: $site-padding 0;
+    padding: $site-padding * .5;
     font-size: calc(15px + 1.5vw);
     line-height: 1.3;
     color: rgba(white, .9);
@@ -46,21 +46,32 @@
     text-shadow: 0.075em 0.075em 0.3em rgba(black, .5);
 
     h1.site-name {
-      color: inherit;
-      text-transform: capitalize;
-      letter-spacing: .15em;
-      margin: 0;
-      font-size: 1.75em;
+      width: 5em;
+
+      @include breakpoint($md) {
+        width: auto;
+      }
     }
 
     p.home-page-intro-text {
       margin: 0;
       text-transform: uppercase;
       letter-spacing: .04em;
+
+      font-size: .8em;
+
+      @include breakpoint(550px) {
+        font-size: 1em;
+      }
+    }
+
+    @include breakpoint(450px) {
+      padding: $site-padding * .75;
     }
 
     @include breakpoint($sm) {
       font-size: calc(12px + 1.5vw);
+      padding: $site-padding;
     }
   }
 
