--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_breakpoints.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_breakpoints.scss
@@ -9,7 +9,7 @@
 
 // Breakpoint variables
 $xxs: 0;
-$xs: 320px;
+$xs: 400px;
 $sm: 600px;
 $md: 800px;
 $lg: 1000px;
@@ -20,6 +20,7 @@ $max-site-width: $xl;
 //Breakpoint variables
 $xxs-only: $xxs ($xs - 1);
 $xxs-up: $xxs;
+$xxs-down: 0 ($xs - 1);
 
 $xs-only: $xs ($sm - 1);
 $xs-up: $xs;
