--- a/wordpress/wp-content/plugins/bb-plugin/modules/tabs/css/frontend.css
+++ b/wordpress/wp-content/plugins/bb-plugin/modules/tabs/css/frontend.css
@@ -1,6 +1,5 @@
 /*  Labels
 ------------------------------------ */
-
 .fl-tabs-label {
 	cursor: pointer;
 }
@@ -14,6 +13,11 @@
 }
 .fl-tabs-label.fl-tab-active:focus {
 	outline: 0;
+}
+.fl-tabs-labels .fl-tabs-label:active,
+.fl-tabs-labels .fl-tabs-label:focus,
+.fl-tabs-labels .fl-tabs-label:hover {
+	text-decoration: none;
 }
 
 /*  Panel Labels
