--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image.scss
@@ -47,6 +47,10 @@
 
     h1.site-name {
       width: 5em;
+      font-family: "raleway", "Montserrat", Helvetica, Arial, sans-serif;
+      font-weight: 800;
+      letter-spacing: .05em;
+      font-size: 2em;
 
       @include breakpoint($md) {
         width: auto;
@@ -57,7 +61,8 @@
       margin: 0;
       text-transform: uppercase;
       letter-spacing: .04em;
-
+      font-family: "raleway", "Montserrat", Helvetica, Arial, sans-serif;
+      font-weight: 800;
       font-size: .8em;
 
       @include breakpoint(550px) {
