--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,600|Open+Sans:400,600,700|Montserrat:400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Montserrat:400,600,700|Raleway:800,900');
 
 html {
   font-size: $font-size--html;
