--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_variables.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/config/_variables.scss
@@ -28,7 +28,7 @@ $font-size--base: 1em;
 $font-size--xxs: $font-size--base * .7;
 $font-size--xs: $font-size--base * .8;
 $font-size--sm: $font-size--base * .9;
-$font-size--md: $font-size--base;
+$font-size--md: $font-size--base * 1;
 $font-size--lg: $font-size--base * 1.25;
 $font-size--xl: $font-size--base * 1.5;
 $font-size--xxl: $font-size--base * 1.75;
