--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/typography/_typography.scss
@@ -34,9 +34,16 @@ h1 {
 
   &.site-name {
     color: inherit;
+    // color: mix(yellow, white, 20%);
+    // color: complement($color--primary);
+    // color: invert($color--primary);
+    // color: mix(invert($color--primary), white, 30%);
     text-transform: capitalize;
     margin: 0;
-    font-size: 1.75em;
+    font-family: "raleway", "Montserrat", Helvetica, Arial, sans-serif;
+    font-weight: 800;
+    letter-spacing: .05em;
+    font-size: 2.125em;
   }
 }
 
