--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/styles.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/styles.scss
@@ -1,5 +1,6 @@
 /* Import breakpoint */
 @import "breakpoint";
+@import "fontawesome";
 @import "config/config";
 @import "base/base";
 @import "typography/typography";
