--- a/wordpress/wp-content/plugins/bb-plugin/css/fl-builder-layout-responsive.css
+++ b/wordpress/wp-content/plugins/bb-plugin/css/fl-builder-layout-responsive.css
@@ -6,7 +6,11 @@
 .fl-visible-medium,
 .fl-col-group .fl-visible-desktop.fl-col,
 .fl-col-group .fl-visible-desktop-medium.fl-col,
-.fl-col-group .fl-visible-medium.fl-col {
+.fl-col-group .fl-visible-medium.fl-col,
+.fl-col-group-equal-height .fl-visible-desktop-medium,
+.fl-col-group-equal-height .fl-visible-medium,
+.fl-col-group.fl-col-group-equal-height .fl-visible-desktop-medium.fl-col,
+.fl-col-group.fl-col-group-equal-height .fl-visible-medium.fl-col {
 	display: none;
 }
 .fl-visible-medium-mobile,
