--- a/wordpress/wp-content/themes/bb-theme/less/footer.less
+++ b/wordpress/wp-content/themes/bb-theme/less/footer.less
@@ -54,10 +54,10 @@ Appearance > Theme Settings > Code or create a child theme.
 		.fas {
 			color: @topbar-icon-bg-color;
 		}
-		.fab {
+		.fab, .fas.fa-envelope, .fas.fa-rss, .fas.fa-map-marker-alt {
 			color: @topbar-icon-fg-color;
 			transition: opacity 0.2s ease-in-out;
-    	opacity: 0.8;
+    		opacity: 0.8;
 			&:hover {
 				color: @topbar-icon-hover-color;
 				opacity: 1;
