--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_components.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_components.scss
@@ -3,5 +3,6 @@
 @import "hc-offcanvas-nav/hc-offcanvas-nav";
 @import "site-header";
 @import "site-footer";
-@import "front-page-image";
+// @import "front-page-image";
+@import "front-page-image--2021";
 @import "social-media-links";
