Further theming work for books page.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_components.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_components.scss
@@ -6,4 +6,5 @@
 // @import "front-page-image";
 @import "front-page-image--2021";
 @import "social-media-links";
+@import "featured-book";
 @import "related-books";
