Front page updates.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--2021.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--2021.scss
@@ -23,7 +23,7 @@
   }
 
   .front-page-cta {
-    background-color: #9c9082;
+    background-color: #8f8f8f;
     width: 100em;
     height: 125em;
     display: flex;
