--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--2021.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--2021.scss
@@ -1,5 +1,12 @@
 .front-page-header--wrapper {
   font-size: 1vw;
+
+  @include breakpoint($xl) {
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    // background-color: $color--primary-dark;
+  }
 }
 
 .front-page-header {
@@ -45,7 +52,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  transition: $transition-fast;
+  // transition: $transition-fast;
 }
 
 .front-page-text {
@@ -64,7 +71,7 @@
 
   .inner {
     color: rgba(white, .9);
-    transition: $transition-fast;
+    // transition: $transition-fast;
     text-shadow: 0.075em 0.075em 0.3em rgba(black, .5);
 
     h1.site-name {
