Home page update.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--2021.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--2021.scss
@@ -1,8 +1,8 @@
 .front-page-header--wrapper {
   font-size: 1vw;
 
-  @include breakpoint($xl) {
-    font-size: 11px;
+  @include breakpoint(1500px) {
+    font-size: 15px;
     display: flex;
     justify-content: center;
     // background-color: $color--primary-dark;
