front page color adjustment.

--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--2021.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--2021.scss
@@ -30,7 +30,8 @@
   }
 
   .front-page-cta {
-    background-color: #8f8f8f;
+    // background-color: #8f8f8f;
+    background-color: #9fa1a4;
     width: 100em;
     height: 125em;
     display: flex;
