Beaver Builder Plugin update.

--- a/wordpress/wp-content/plugins/bb-plugin/css/fl-builder.css
+++ b/wordpress/wp-content/plugins/bb-plugin/css/fl-builder.css
@@ -3577,11 +3577,13 @@ form.fl-builder-settings {
 	max-width: none;
 	width: 100% !important;
 }
-
+	
 /* Slim - Repeaters */
+.fl-lightbox-width-slim .fl-builder-field-multiples {
+	display: block;
+}
 .fl-lightbox-width-slim .fl-builder-field-multiple {
-	display: flex;
-	flex-wrap: wrap;
+	display: block;
 	position: relative;
 }
 .fl-lightbox-width-slim .fl-builder-field-multiple .fl-field-label {
@@ -6320,6 +6322,7 @@ Rules to ensure compatibility with v2.0.
 }
 
 .select2-dropdown {
+	top: 12px;
 	border-color: transparent !important;
 	border-style: solid !important;
 	border-radius: 4px !important;
