--- a/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--2021.scss
+++ b/wordpress/wp-content/themes/fezziwig-base-2019/styles/sass/components/_front-page-image--2021.scss
@@ -5,7 +5,6 @@
     font-size: 13px;
     display: flex;
     justify-content: center;
-    // background-color: $color--primary-dark;
   }
 }
 
@@ -30,8 +29,8 @@
   }
 
   .front-page-cta {
-    // background-color: #8f8f8f;
-    background-color: #9fa1a4;
+    // background-color: #9fa1a4;
+    background-color: darken(#9fa1a4, 10%);
     width: 100em;
     height: 125em;
     display: flex;
@@ -53,7 +52,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  // transition: $transition-fast;
 }
 
 .front-page-text {
@@ -64,20 +62,17 @@
   font-size: 2em;
 
   @include breakpoint($sm) {
-    // font-size: 1.022em;
-    // font-size: 1.25em;
     font-size: 1.15em;
     bottom: 2.25em;
   }
 
   .inner {
-    color: rgba(white, .9);
-    // transition: $transition-fast;
-    text-shadow: 0.075em 0.075em 0.3em rgba(black, .5);
+    color: rgba(white, 0.9);
+    text-shadow: 0.075em 0.075em 0.3em rgba(black, 0.5);
 
     h1.site-name {
       font-size: 4.35em;
-      margin: 0 0 .25em;
+      margin: 0 0 0.25em;
       line-height: 1.2;
       font-weight: 600;
     }
@@ -86,7 +81,7 @@
       margin: 0;
       line-height: 1.3;
       text-transform: uppercase;
-      letter-spacing: .04em;
+      letter-spacing: 0.04em;
       font-family: "raleway", "Montserrat", Helvetica, Arial, sans-serif;
       font-weight: 600;
       font-size: 1.65em;
@@ -108,39 +103,53 @@ a.new-book-link {
   text-decoration: none;
   font-family: "raleway", "Montserrat", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
+  position: relative;
 
   @include breakpoint($sm) {
-    // font-size: 1.5em;
     font-size: 1.7em;
   }
 
   .new-book-link__text {
-    text-shadow: 0 0 .75em rgba(white, .75);
+    text-shadow: 0 0 0.75em rgba(white, 0.75);
     line-height: 1;
     font-size: 2.5em;
   }
 
   &:before {
-    content: '';
+    content: "";
     background-image: url(../../images/dharma-bums-cover.jpg);
     background-color: #36bbc2;
     background-position: bottom;
-    border: 1px solid rgba(black, .5);
+    border: 1px solid rgba(black, 0.5);
     height: 21em;
     width: 13.7em;
-    box-shadow: 0 0 2.5em rgba(white, .5);
+    box-shadow: 0 0 2.5em rgba(white, 0.25);
     background-size: contain;
     background-repeat: no-repeat;
     margin: 2.5em auto 1em;
   }
 
+  &:after {
+    content: "";
+    background-image: url(../../images/nautilus_award.png);
+    width: 6.125em;
+    height: 6.125em;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 13.5em;
+    right: -1.5em;
+    filter: drop-shadow(0.25em 0.25em 0.175em rgba(black, 0.25));
+  }
+
   &:hover {
     .new-book-link__text {
-      text-shadow: 0 0 .75em rgba(white, 1);
+      text-shadow: 0 0 0.75em rgba(white, 1);
     }
 
     &:before {
-      box-shadow: 0 0 2.5em rgba(white, .75);
+      box-shadow: 0 0 2.5em rgba(white, 0.75);
     }
   }
 }
